# ai_ad_pipeline_apps

./: .dockerignore  .gitignore  README.md  business-presentation.md  docker-compose.yml  frontend-design-pipeline.md  mvp_pipeline.md  mvp_pipeline_ru.md  pipeline.md  pipline.md  pyproject.toml  run_video_pipeline.sh  train_detection_from_scratch.py
CV_images/: annotations.xml
apps/backend/: .env.example  Dockerfile
apps/backend/alembic/: env.py
apps/backend/src/: main.py  worker.py
apps/frontend/: package.json  pnpm-lock.yaml
apps/frontend/src/: App.css  App.tsx  api.ts  index.css  routing.ts  types.ts
data/yolo/ad_surface_v2/: data.yaml  split_manifest.csv
data/yolo/ad_surface_v3_finetune/: data.yaml  split_manifest.csv
ml/: __init__.py
ml/ad_detection/: README.md
ml/ad_detection/scripts/: extract_hard_negatives.py  filter_cvat_mining_selection.py  (+10 more)
ml/pipeline/: __init__.py  brand_overrides.csv  pipeline.md  pipline.md  run_pipeline.py
notebooks/: evaluate_finetuned_model_v3.ipynb  prepare_yolo_dataset_v2.ipynb  run_video_inference_test.ipynb  video_test.ipynb
scripts/: build_yolo_finetune_dataset.py  dev.sh  export_finetune_video_fp_for_cvat.py  prelabel_for_cvat.py  prepare_yolo_dataset_from_cvat_export.py  train_yolo11m_pretrained_img1280_b6_v1.py  train_yolo11m_pretrained_img960_b10_antifp_v1.py  train_yolo11x_pretrained_img960_b5_v1.py  train_yolo_finetune_v3.py
test_60/: annotations.xml
test_billboard_own/: annotations.xml
yolo_ad_surface_dataset/: data.yaml
yolo_ad_surface_dataset/labels/: test.cache  train.cache  val.cache
(+84 files in other folders)
