[project]
name = "volna"
version = "0.1.0"
description = "Add your description here"
readme = "ml/ad_detection/README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "easyocr>=1.7.2",
    "kaleido==0.2.1",
    "nbformat>=5.10.4",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "plotly>=6.8.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "timm>=1.0.27",
    "ultralytics>=8.4.63",
]
